--- a/src/Pages/Cabinet/Components/Devices/ContactItem/ContactItem.module.sass
+++ b/src/Pages/Cabinet/Components/Devices/ContactItem/ContactItem.module.sass
@@ -42,6 +42,10 @@
     font-family: "SF Pro Light", sans-serif
     animation: showText 0.2s ease-in-out
     margin: 0 10px 0 0
+    width: 90%
+    white-space: nowrap
+    text-overflow: ellipsis
+    overflow: hidden
 
   .functionWrap
     display: flex
